<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Brasileirão 2014</string>
    <string name="dialog_carregando">Carregando&#8230;</string>
    <string name="label_jogos">J</string>
    <string name="label_vitorias">V</string>
    <string name="label_empates">E</string>
    <string name="label_pontos">P</string>
    <string name="label_derrotas">D</string>
    <string name="label_gols_pro">GP</string>
    <string name="label_gols_contra">GC</string>
    <string name="label_saldo_gols">SG</string>
    <string name="label_versus">X</string>
    <string name="label_separador">-</string>
    <string name="label_copyright">by Edson Silva</string>
    <string name="label_versao">Versão: 1.0.0</string>
    <string name="label_info_futebits">Dados obtidos da:</string>
    <string name="mensagem_erro_generico">Ocorreu um problema ao atualizar os dados, verifique sua conexão com a internet.</string>
    
    <string-array name="nav_drawer_items">
        <item>Tabela</item>
        <item>Jogos</item>
        <item>Sobre</item>
    </string-array>

    <string name="ads_unit_id">ca-app-pub-9009893795627397/3635996062</string>
    <string name="device_test_id">040E5414F1FE9A0FEBAF5A6E496488B1</string>
    
    <string name="futebits">http://www.futebits.com.br</string>
</resources>
