<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <TableLayout
        android:id="@+id/table_header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/holo_gray_light" >

            <TextView
                android:layout_width="@dimen/tablelayout_header_adjust"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/tv_pontos"
                android:layout_width="@dimen/tablelayout_header_textview"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="3dp"
                android:text="@string/label_pontos"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_jogos"
                android:layout_width="@dimen/tablelayout_header_textview"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="3dp"
                android:text="@string/label_jogos"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_vitorias"
                android:layout_width="@dimen/tablelayout_header_textview"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="3dp"
                android:text="@string/label_vitorias"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_empates"
                android:layout_width="@dimen/tablelayout_header_textview"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="3dp"
                android:text="@string/label_empates"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_derrotas"
                android:layout_width="@dimen/tablelayout_header_textview"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="3dp"
                android:text="@string/label_derrotas"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_gols_pro"
                android:layout_width="@dimen/tablelayout_header_textview"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="3dp"
                android:text="@string/label_gols_pro"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_gols_contra"
                android:layout_width="@dimen/tablelayout_header_textview"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="3dp"
                android:text="@string/label_gols_contra"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_saldo_gols"
                android:layout_width="@dimen/tablelayout_header_textview"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="3dp"
                android:text="@string/label_saldo_gols"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true" >

        <TableLayout
            android:id="@+id/table_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*" >
        </TableLayout>
    </ScrollView>

</LinearLayout>