<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white" >

    <ImageView
        android:id="@+id/imagem_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:contentDescription="@null"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/name_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imagem_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_app"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/label_copyright" />

    <TextView
        android:id="@+id/versao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/copyright"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/label_versao" />
    
    <TextView
        android:id="@+id/futebits_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/versao"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/label_info_futebits" />

    <ImageButton
        android:id="@+id/futebits_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/futebits_info"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:background="@android:color/white"
        android:contentDescription="@string/futebits"
        android:src="@drawable/futebits" />

</RelativeLayout>